--- a/pages/contact.html
+++ b/pages/contact.html
@@ -28,7 +28,7 @@ $("#send").click(function(){
  	let country = $("#country").val();
  	let msg = $("textarea#msg").val();
   $.ajax({
-   url:"pages/send.php",
+   url:"send.php",
    method:"post",
    data:{
    	fullname:fullname,
