--- a/pages/works.html
+++ b/pages/works.html
@@ -18,5 +18,10 @@
 	<!--  -->
 	<li class="site xo"><a href="https://radouan-msaad.github.io/xo1">https://radouan-msaad.github.io/xo1</a></li>
 	<!--  -->
+<!--  -->
+	<li class="site choose"><a href="https://radouan-msaad.github.io/choose">https://radouan-msaad.github.io/choose</a></li>
+	<!--  -->
+	<li class="site challenge"><a href="https://radouan-msaad.github.io/challenge">https://radouan-msaad.github.io/challenge</a></li>
+	<!--  -->
 </ul>
 </div>
